// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BucketArea.vue renders correctly with bucket 1`] = `
<div class="buckets-area">
  <div class="buckets-overflow">
    <div class="buckets-header">
      <p class="buckets-header__title">Usage per bucket</p>
      <vheader-stub styletype="common" placeholder="Buckets" search="[Function]" class="buckets-header-component"></vheader-stub>
    </div>
    <div class="buckets-container">
      <sortingheader-stub class="buckets-container__header"></sortingheader-stub>
      <vlist-stub itemcomponent="[Function]" onitemclick="[Function]" dataset="[object Object]" class="buckets-list"></vlist-stub>
    </div>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`BucketArea.vue renders correctly with pagination 1`] = `
<div class="buckets-area">
  <div class="buckets-overflow">
    <div class="buckets-header">
      <p class="buckets-header__title">Usage per bucket</p>
      <vheader-stub styletype="common" placeholder="Buckets" search="[Function]" class="buckets-header-component"></vheader-stub>
    </div>
    <div class="buckets-container">
      <sortingheader-stub class="buckets-container__header"></sortingheader-stub>
      <vlist-stub itemcomponent="[Function]" onitemclick="[Function]" dataset="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" class="buckets-list"></vlist-stub>
    </div>
    <!---->
  </div>
  <div class="buckets-area__pagination-area">
    <vpagination-stub totalpagecount="2" onpageclickcallback="[Function]"></vpagination-stub>
  </div>
</div>
`;

exports[`BucketArea.vue renders correctly without bucket 1`] = `
<div class="buckets-area">
  <nobucketarea-stub></nobucketarea-stub>
  <!---->
</div>
`;

exports[`BucketArea.vue renders correctly without search results 1`] = `
<div class="buckets-area">
  <div class="buckets-overflow">
    <div class="buckets-header">
      <p class="buckets-header__title">Usage per bucket</p>
      <vheader-stub styletype="common" placeholder="Buckets" search="[Function]" class="buckets-header-component"></vheader-stub>
    </div>
    <!---->
    <div class="empty-search-result-area">
      <h1 class="empty-search-result-area__title">No results found</h1>
    </div>
  </div>
  <!---->
</div>
`;
